jwt tokens setup

--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "jwt-simple": "^0.5.5",
     "mongoose": "^5.3.14",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.7"
