--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,13 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Server setup with NodeJS, Express, MongoDB and User Authorization via Tokens",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
   },
-  "author": "",
+  "author": "Michael Salvati",
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -16,6 +16,8 @@
     "jwt-simple": "^0.5.5",
     "mongoose": "^5.3.14",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   }
 }
